# JXQY-all-in-one

./: .gitignore  .gitmodules  README.md  shf.sln
3rd/: README.md
3rd/SDL2/ios/SDL2.framework/: Info.plist  SDL2  default.metallib
3rd/SDL2_image/ios/SDL2_image.framework/: Info.plist  SDL2_image
3rd/SDL2_ttf/ios/SDL2_ttf.framework/: Info.plist  SDL2_ttf
3rd/ffmpeg/ios/ffmpegkit.framework/: Info.plist
3rd/ffmpeg/ios/libavdevice.framework/: Info.plist  libavdevice
3rd/ffmpeg/ios/libavfilter.framework/: Info.plist
3rd/ffmpeg/ios/libavutil.framework/: libavutil
3rd/ffmpeg/ios/libswresample.framework/: libswresample
3rd/ffmpeg/ios/libswscale.framework/: libswscale
3rd/fmod/android/inc/: fmod_common.h
3rd/libpng/src/: Android.mk
3rd/lua/: loslib.c  lua.hpp
3rd/minilzo/: lzoconf.h  minilzo.c
Editor/: About.dfm  ChildWin.dfm  ChildWin.pas  Head.pas  ImageEdit.dfm  ImageEdit.pas  ImageForm.dfm  ImageForm.pas  Main.dfm  Main.pas  PakFile.pas  PicFile.pas  RePack.dfm  RePack.pas  about.pas  app.res  lazlzo.pas  lzoobj.pas  mouse.pas  opendisplay.dfm  opendisplay.pas  shfEditor.dpr  shfEditor.dproj  shfEditor.dproj.local  shfEditor.identcache  shfEditor.res
Starter/: Starter.dpr  Starter.dproj  Starter.dproj.local  Starter.identcache  Starter.res  main.dfm  main.pas
Starter/Pascal-SDL-2-Headers-master/: sdl2.pas  sdlsyswm.inc
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/jni/: Application.mk  CMakeLists.txt
android/app/jni/src/: CMakeLists.txt
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/SDL2/: CMakeLists.txt
android/app/src/main/cpp/SDL2_image/: CMakeLists.txt
android/app/src/main/cpp/SDL2_ttf/: CMakeLists.txt
android/app/src/main/cpp/freetype/: CMakeLists.txt
android/app/src/main/cpp/libpng/: CMakeLists.txt
android/gradle/wrapper/: gradle-wrapper.properties
assets/: Assets-Folder.md  README.md
licenses/: license.txt
licenses/FMOD/: license.txt
licenses/lua/: Lua.txt
linux/: CMakeLists.txt  build.sh  install-dependents.sh
macos_ios/jxqy/jxqy iOS/: Main.storyboard
macos_ios/jxqy/jxqy.xcodeproj/: project.pbxproj
scripts/: update_version.bat
shf-cpp/: resource.h  shf-cpp.rc  shf-cpp.vcxproj  shf-cpp.vcxproj.filters  shf.res
shf-cpp/resource/: res.txt
shf-cpp/src/: shf-cpp.cpp  shf-cpp.h
shf-cpp/src/Component/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  ColumnImage.cpp  ColumnImage.h  Component.h  DragButton.cpp  DragButton.h  FadeMask.cpp  FadeMask.h  ImageContainer.cpp  ImageContainer.h  Item.cpp  Item.h  Label.cpp  Label.h  ListBox.cpp  ListBox.h  MemoText.cpp  MemoText.h  Panel.cpp  Panel.h  Scrollbar.cpp  Scrollbar.h  TalkLabel.cpp  TalkLabel.h  TransImage.cpp  TransImage.h  VideoContainer.cpp  VideoContainer.h  VideoPlayer.cpp  VideoPlayer.h
shf-cpp/src/Element/: Element.cpp  Element.h
shf-cpp/src/Engine/: Engine.cpp  Engine.h  EngineBase.cpp  EngineBase.h
shf-cpp/src/File/: File.cpp  File.h  INIReader.cpp  INIReader.h  PakFile.cpp  PakFile.h  ini.cpp  ini.h
shf-cpp/src/Game/: Game.cpp  Game.h  GameTypes.h
shf-cpp/src/Image/: IMP.cpp  IMP.h
shf-cpp/src/Types/: CommonTypes.h  ComponentTypes.h  ElementTypes.h  EventTypes.h  ImagePackageFile.h  PakTypes.h  Types.h
shf-cpp/src/Weather/: Weather.cpp  Weather.h
shf-cpp/src/libconvert/: libconvert.cpp  libconvert.h
src/: main.cpp
src/Component/: BaseComponent.cpp  BaseComponent.h  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  ColumnImage.cpp  ColumnImage.h  Component.h  DragButton.cpp  DragButton.h  DragRoundButton.cpp  DragRoundButton.h  FadeMask.cpp  FadeMask.h  ImageContainer.cpp  ImageContainer.h  Item.cpp  Item.h  Joystick.cpp  Joystick.h  Label.cpp  Label.h  ListBox.cpp  ListBox.h  MemoText.cpp  MemoText.h  Panel.cpp  Panel.h  RoundButton.cpp  RoundButton.h  Scrollbar.cpp  Scrollbar.h  TalkLabel.cpp  TalkLabel.h  TextButton.cpp  TextButton.h  TransImage.cpp  TransImage.h  VideoPlayer.cpp  (+1 more)
src/Element/: Element.cpp  Element.h
src/Engine/: Engine.cpp  Engine.h  EngineBase.cpp  EngineBase.h
src/File/: File.cpp  File.h  INIReader.cpp  INIReader.h  PakFile.cpp  PakFile.h  ini.cpp  ini.h  log.cpp  log.h
src/Game/: Game.cpp  Game.h  GameTypes.h
src/Game/Config/: Config.cpp  Config.h
src/Game/Data/: Camera.cpp  Camera.h  CollisionDetector.cpp  CollisionDetector.h  Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h  GameElement.cpp  GameElement.h  Global.cpp  Global.h  Goods.cpp  Goods.h  GoodsManager.cpp  GoodsManager.h  Magic.cpp  Magic.h  MagicManager.cpp  MagicManager.h  Map.cpp  Map.h  Memo.cpp  Memo.h  NPC.cpp  NPC.h  NPCManager.cpp  NPCManager.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  PartnerManager.cpp  PartnerManager.h  Player.cpp  Player.h  Traps.cpp  Traps.h  VariableList.cpp  VariableList.h  (+2 more)
src/Game/GameManager/: GameController.cpp  GameController.h  GameManager.cpp  GameManager.h  MenuController.cpp  MenuController.h  SaveFileManager.cpp  SaveFileManager.h
src/Game/Menu/: BottomMenu.cpp  BottomMenu.h  BuySellMenu.cpp  BuySellMenu.h  ColumnMenu.cpp  ColumnMenu.h  Dialog.cpp  Dialog.h  EquipMenu.cpp  EquipMenu.h  GoodsMenu.cpp  GoodsMenu.h  JoystickPanel.cpp  JoystickPanel.h  MagicMenu.cpp  MagicMenu.h  MemoMemu.h  MemoMenu.cpp  Menu.h  MsgBox.cpp  MsgBox.h  Option.cpp  Option.h  PracticeMenu.cpp  PracticeMenu.h  SaveLoad.cpp  SaveLoad.h  SkillsPanel.cpp  SkillsPanel.h  StateMenu.cpp  StateMenu.h  System.cpp  System.h  ToolTip.cpp  ToolTip.h  YesNo.cpp  YesNo.h
src/Game/Scene/: MainScene.cpp  MainScene.h  Nurturance.cpp  Nurturance.h  Title.cpp  Title.h  TitleTeam.cpp  TitleTeam.h  VideoPage.cpp  VideoPage.h
src/Game/Script/: Script.cpp  Script.h
src/Image/: IMP.cpp  IMP.h
src/Types/: CommonTypes.h  ElementTypes.h  EventTypes.h  ImagePackageFile.h  MapTypes.h  PakTypes.h  Types.h  WeatherTypes.h
src/Weather/: Weather.cpp  Weather.h
src/libconvert/: libconvert.cpp  libconvert.h
win/: jxqy-all-in-one.sln
win/jxqy-all-in-one/: jxqy-all-in-one.rc  jxqy-all-in-one.vcxproj  jxqy-all-in-one.vcxproj.filters  jxqy.res  resource.h
(+162 files in other folders)
